[gd_scene load_steps=9 format=3 uid="uid://dscc17b2thxe0"]

[ext_resource type="PackedScene" uid="uid://chd0jbgqx1yf7" path="res://Scenes/BossFight/zombie_boss.tscn" id="1_0g3ec"]
[ext_resource type="Script" uid="uid://bowkg2ouktc3n" path="res://Scripts/BossHandlers/boss_apocalypse_handler.gd" id="1_wuutc"]
[ext_resource type="PackedScene" uid="uid://cig6k82hw3lh2" path="res://Scenes/Entities/golden_bone.tscn" id="3_fcdb5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_byj6s"]
size = Vector2(63, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wuutc"]
size = Vector2(14, 1)

[sub_resource type="Animation" id="Animation_fcdb5"]
resource_name = "GoldenBoneLower"
length = 3.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GoldenBone:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(880, -882), Vector2(880, -710)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GoldenBone:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GoldenBone:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_oq5ox"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GoldenBone:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(880, -882)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GoldenBone:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GoldenBone:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eiio7"]
_data = {
&"GoldenBoneLower": SubResource("Animation_fcdb5"),
&"RESET": SubResource("Animation_oq5ox")
}

[node name="BossArenaApocalypse" type="Node2D"]
script = ExtResource("1_wuutc")

[node name="BossStartTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossStartTrigger"]
position = Vector2(621.5, 144)
shape = SubResource("RectangleShape2D_byj6s")
debug_color = Color(0.171948, 0.643603, 1.92523e-07, 0.42)

[node name="ZombieBoss" parent="." instance=ExtResource("1_0g3ec")]
position = Vector2(880, -672)

[node name="CamToBossTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BossStartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="BossEndTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BossDeathTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossDeathTrigger"]
position = Vector2(856, -719.5)
shape = SubResource("RectangleShape2D_wuutc")

[node name="GoldenBone" parent="." instance=ExtResource("3_fcdb5")]
position = Vector2(880, -882)
monitoring = false
monitorable = false
bone_name = "ApocalypseBoss"
song_type = "Boss"
target_speedrun = "res://Scenes/Levels/haunted_1.tscn"

[node name="GoldenBoneAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_eiio7")
}

[connection signal="body_entered" from="BossStartTrigger" to="." method="_on_boss_start_trigger_body_entered"]
[connection signal="timeout" from="CamToBossTimer" to="." method="_on_cam_to_boss_timer_timeout"]
[connection signal="timeout" from="BossStartTimer" to="." method="_on_boss_start_timer_timeout"]
[connection signal="timeout" from="BossEndTimer" to="." method="_on_boss_end_timer_timeout"]
[connection signal="body_entered" from="BossDeathTrigger" to="." method="_on_boss_death_trigger_body_entered"]
